# ai-research-engineer

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  api_check.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  design.yml  feature_request.yml  good_first_issue.yml
.github/workflows/: ci.yml
config/: pricing.yaml
docker/: docker-compose.yaml
docker/nginx/: nginx.conf  nginx.local.conf
docs/: api_reference.md  architecture.md  cli_reference.md  extending.md  getting_started.md  tools_configuration.md
fre_test/knowledge_base/: citation_graph_ARXIV_2402.1713.json  citation_graph_ARXIV_2402.1713.md
frontend/: .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/blog/: BlogClient.tsx  page.tsx
frontend/app/docs/: DocsClient.tsx  page.tsx
frontend/app/papers/: PapersClient.tsx  page.tsx
frontend/components/: ActiveSessions.tsx  AsciiOverlay.tsx  Direction.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Pipeline.tsx  ResearchSubmissionForm.tsx
frontend/components/sections/: Research.tsx
frontend/lib/: api.ts  flags.ts
scripts/: deploy.sh  release.sh  serve.sh  wait-for-port.sh
src/ai_research_engineer/: __init__.py
src/ai_research_engineer/agents/: __init__.py
src/ai_research_engineer/cli/: __init__.py  main.py
src/ai_research_engineer/core/: __init__.py  api.py  argument_tree.py  events.py  pricing.py
src/ai_research_engineer/prompts/: __init__.py
src/ai_research_engineer/server/: app.py  models.py  run_store.py  storage.py
src/ai_research_engineer/tools/: __init__.py  code_graph_ops.py  data_ops.py  file_ops.py  latex_ops.py  research_ops.py  semantic_scholar_ops.py  web_ops.py
templates/NeurReps_2024_Template/: pmlr-sample.tex
tests/: __init__.py
tests/integration/: __init__.py  test_adk_workflow.py  test_claude_code.py
tests/unit/: __init__.py  test_agents.py  test_argument_tree.py  test_core_api.py  test_events.py  test_evolve.py  test_evolve_tree.py  test_pricing.py  test_prompts.py  test_run_store.py  test_tools.py  test_usage.py
(+42 files in other folders)
